# intermediate-bo4e-migration-models

./: .gitignore  .readthedocs.yml  README.md  little_script.py  pyproject.toml  requirements.in  requirements.txt  tox.ini
.github/workflows/: bo4e_consistency.yml  bo4e_integrity.yml  bo4e_updater.yml  docs.yml  python-publish.yml  pythonlint.yml  unittests.yml  updater.yml
bo4e/: bo4e_config.json  bo4e_updater.py  tox.env
bo4e/models/bo/: Bilanzierung.json  Dokument.json  Hinweis.json  Kampagne.json  Transaktionsdaten_invoices.json  Transaktionsdaten_quantities.json  ZaehlerGas.json
bo4e/models/enum/: InvoiceStatus.json
dev_requirements/: requirements-docs.txt  requirements-formatting.txt  requirements-generate-bo4e.in  requirements-generate-bo4e.txt  requirements-generate-orm.in  requirements-generate-orm.txt  requirements-linting.txt  requirements-packaging.txt  requirements-spellcheck.txt  requirements-tests.txt  requirements-type_check.txt
src/bommbee/custom/: __init__.py
src/bommbee/custom/enum/: __init__.py  hinweisthema.py
src/ibims/bo/: bilanzierung.py  file.py  hinweis.py  marktlokation_erweitert.py  rechnung.py  zaehler.py
src/ibims/bo4e/: __init__.py  __version__.py  zusatz_attribut.py
src/ibims/bo4e/bo/: __init__.py  angebot.py  ausschreibung.py  bilanzierung.py  buendelvertrag.py  dokument.py  energiemenge.py  fremdkosten.py  geraet.py  geschaeftspartner.py  hinweis.py  kampagne.py  kosten.py  lastgang.py  lokationszuordnung.py  marktlokation.py  marktlokation_erweitert.py  marktteilnehmer.py  messlokation.py  netzlokation.py  person.py  preisblatt.py  preisblatt_dienstleistung.py  preisblatt_hardware.py  preisblatt_konzessionsabgabe.py  preisblatt_messung.py  preisblatt_netznutzung.py  rechnung.py  region.py  regionaltarif.py  (+13 more)
src/ibims/com/: __init__.py  concessionfee.py  konzessionsabgabe.py  lastprofil.py  sepa_info.py  verbrauch.py  vertragskonto.py  zaehlpunkt.py
src/ibims/dataclass/: __init__.py
src/ibims/datasets/: __init__.py  agent_hint_loader.py  base.py  customer_loader.py  document_loader.py  invoice_loader.py  network_loader.py  product_loader.py  quantities_loader.py  transactiondata.py
src/ibims/enum/: aggregationsverantwortung.py  profilart.py  profiltyp.py  prognosegrundlage_detail.py  regelzone.py
src/ibims/enums/: __init__.py  bdewartikelnummer.py  regelzone.py
src/ibims/orm/: __main__.py
src/ibims/targetmodels/: transactiondata.py
src/powercloud/custom/: __init__.py
unittests/: test_consistency.py  test_myclass.py
(+344 files in other folders)
