[project]
name = "ibims"
description = "A Pydantic based BO4E data model that is inteded to be used in data migrations from one system to another"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Hochfrequenz Unternehmensberatung GmbH", email = "info@hochfrequenz.de" }]
keywords = ["bo4e", "pydantic", "migration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [ # add all the dependencies from requirements.in here, too
    "bomf>=0.6.8"
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
tests = [
    "pytest==8.3.3"
]
linting = [
    "pylint==3.3.1",
]
type_check = [
    "mypy==1.11.2",
    "typing-extensions==4.7.1"
]
spellcheck = [
    "codespell==2.3.0"
]
coverage = [
    "coverage==7.6.10"
]
formatting = [
    "black==24.10.0",
    "isort==5.13.2"
]
generate_bo4e = [
    "bo4e-schema-tool==0.0.9",
    "bo4e-python-generator==0.0.13",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "gitpython==3.1.43",
]
test_packaging = [
    "build==1.2.2.post1",
    "twine==5.1.1"
]
docs = [
    "sphinx==8.0.2",
    "sphinx_rtd_theme==3.0.1",
]

[project.urls]
Changelog = "https://github.com/Hochfrequenz/intermediate-bo4e-migration-models/releases"
Homepage = "https://github.com/Hochfrequenz/intermediate-bo4e-migration-models"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint.MASTER]
ignore-paths = ".*src/ibims/bo4e/.*"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "fixme,too-few-public-methods"

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"



[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_ibims_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
